trunk/Archive2/70/6cbe3c11b2332b/output
main.cpp:13:18: error: no member named 'GetModuleNumber' in 'std::shared_ptr<Foo>'
    cout << foo->GetModuleNumber() << endl;
            ~~~  ^
1 error generated.
